--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
         "@ionic-native/core": "3.12.1",
         "@ionic-native/google-maps": "3.12.1",
         "@ionic-native/in-app-browser": "^4.2.0",
-        "@ionic-native/splash-screen": "3.12.1",
+        "@ionic-native/splash-screen": "^3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
         "@ngx-translate/core": "6.0.1",
         "@ngx-translate/http-loader": "0.0.3",
         "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-inappbrowser": "^1.7.1",
@@ -59,7 +60,8 @@
             "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
